# Churn_ML_System

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.training  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: ci.yml
docs/: README.md  api.md  config.md  events.md  explainability.md  features.md  inference.md  lifecycle.md  logging.md  monitoring.md  observability.md  pipelines.md  root_modules.md  serving.md  training.md  utils.md  validation.md  workers.md
docs/diagrams/: api_flow.dot  config_flow.dot  event_store.dot  lifecycle_flow.dot  monitoring_flow.dot  system_architecture.dot  training_pipeline.dot
mlruns/: mlflow.db
mlruns/0/: meta.yaml
mlruns/231606303727739298/: meta.yaml
mlruns/231606303727739298/132226f10aaa44fdae9eb163972cf117/: meta.yaml
mlruns/models/churn_model/: meta.yaml
models/experiments/churn_model_20260324_094344/: experiment_report.json  metadata.json
models/experiments/churn_model_20260324_094625/: metadata.json
models/production/current/: metadata.json
observability/prometheus/: alert_rules.yml  prometheus.yml
scripts/: generate_smoke_csv.py
src/churn_system/: artifacts.py  mlflow_utils.py  schema.py
src/churn_system/api/: api.py  errors.py  schema_generator.py
tests/: test_api_predict.py  test_concurrent_training.py  test_drift.py  test_explainability.py  test_features.py  test_lifecycle.py  test_lineage.py  test_model_registry.py  test_monitoring.py  test_retry.py  test_schema_compare.py  test_training_smoke.py  test_validation.py
(+92 files in other folders)
