[project]
name = "churn-ml-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.7",
    "mlflow>=2.14.0",
    "numpy>=2.2.6",
    "pandera>=0.20.0",
    "pandas>=2.3.3",
    "pydantic>=2.0",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shap>=0.46.0",
    "scipy>=1.14.0",
    "sqlalchemy>=2.0.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
churn_system = ["config/settings.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
